@@ -42,7 +42,6 @@
 #include "e-hal.h"
 #include "epiphany-shm-manager.h"	/* For private APIs */
 #include "epiphany-hal-api-local.h"
-#include "esim-target.h"
 
 #pragma GCC diagnostic push
 #pragma GCC diagnostic ignored "-Wsign-compare"
@@ -66,6 +65,7 @@ char const hdf_env_var_name[] = "EPIPHANY_HDF";
 e_platform_t e_platform = { E_EPI_PLATFORM };
 #pragma GCC diagnostic pop
 
+extern const struct e_target_ops esim_target_ops;
 const struct e_target_ops native_taget_ops;
 static const struct e_target_ops *target_ops = &native_taget_ops;
 
@@ -94,6 +94,11 @@ int e_init(char *hdf)
 		warnx("e_init(): " EHAL_TARGET_ENV " environment variable set to esim but target not compiled in.");
 		return E_ERR;
 	}
+#endif
+
+#ifdef ESIM_TARGET
+	if (ee_esim_target_p())
+		target_ops = esim_target_ops;
 #endif
 
 	if (E_OK != target_ops->init())
@@ -1758,6 +1763,24 @@ unsigned long ee_rndl_page(unsigned long size)
 
 	return rsize;
 }
+
+
+// Target code
+bool ee_esim_target_p()
+{
+	static bool initialized = false;
+	static bool esim = false;
+	const char *p;
+
+	if (!initialized) {
+		p = getenv(EHAL_TARGET_ENV);
+		esim = (p && strncmp(p, "esim", sizeof("esim")) == 0);
+        initialized = true;
+	}
+
+	return esim;
+}
+
 
 static int populate_platform_native(e_platform_t *platform, char *hdf)
 {
