@@ -1,5 +1,13 @@
 2016-03-03  Ola Jeppsson  <ola@adapteva.com>
 
+	* e-hal/src/epiphany-hal-api-local.h: Add prototype for
+	ee_esim_target_p.
+	* e-hal/src/e-loader.c: Include epiphany-hal-api-local.h.
+	* e-hal/src/epiphany-hal.c (ee_esim_target_p): Move from
+	esim-target.c.
+
+2016-03-03  Ola Jeppsson  <ola@adapteva.com>
+
 	* e-hal/src/epiphany-hal-data-local.h (e_target_ops): Move
 	struct here from epiphany-hal.c. Add init, finalize, and
 	populate_platform members.
